--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "my-crypto-wallet",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": ">=18.14.0 <20"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
