--- a/package.json
+++ b/package.json
@@ -2,47 +2,44 @@
   "name": "my-crypto-wallet",
   "version": "0.1.0",
   "private": true,
-  "engines": {
-    "node": "22.x"
-  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
-  "dependencies": {
-    "@radix-ui/react-icons": "^1.3.2",
-    "@radix-ui/react-toggle": "^1.1.9",
-    "@react-three/drei": "^10.6.1",
-    "@react-three/fiber": "^9.3.0",
-    "@solana/web3.js": "^1.98.4",
-    "bip39": "^3.1.0",
-    "bs58": "^6.0.0",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "ed25519-hd-key": "^1.3.0",
-    "ethers": "^6.15.0",
-    "lucide-react": "^0.537.0",
-    "next": "15.4.5",
-    "next-themes": "^0.4.6",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "sonner": "^2.0.7",
-    "tailwind-merge": "^3.3.1",
-    "three": "^0.179.1",
-    "tweetnacl": "^1.0.3"
-  },
+"dependencies": {
+  "@radix-ui/react-icons": "^1.3.2",
+  "@radix-ui/react-toggle": "^1.1.9",
+  "@react-three/drei": "^9.102.6",
+  "@react-three/fiber": "^8.15.19",
+  "@solana/web3.js": "^1.98.4",
+  "bip39": "^3.1.0",
+  "bs58": "^6.0.0",
+  "class-variance-authority": "^0.7.1",
+  "clsx": "^2.1.1",
+  "ed25519-hd-key": "^1.3.0",
+  "ethers": "^6.15.0",
+  "lucide-react": "^0.537.0",
+  "next": "^14.2.3",
+  "next-themes": "^0.4.6",
+  "react": "^18.3.1",
+  "react-dom": "^18.3.1",
+  "sonner": "^2.0.7",
+  "tailwind-merge": "^3.3.1",
+  "three": "^0.179.1",
+  "tweetnacl": "^1.0.3"
+},
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.4.5",
-    "tailwindcss": "^4",
-    "tw-animate-css": "^1.3.6",
-    "typescript": "^5"
-  }
+  "@eslint/eslintrc": "^3",
+  "@tailwindcss/postcss": "^4",
+  "@types/node": "^20",
+  "@types/react": "^18",
+  "@types/react-dom": "^18",
+  "eslint": "^8",
+  "eslint-config-next": "^14.2.3",
+  "tailwindcss": "^4",
+  "tw-animate-css": "^1.3.6",
+  "typescript": "^5"
+}
 }
