--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "clsx": "^2.1.1",
   "ed25519-hd-key": "^1.3.0",
   "ethers": "^6.15.0",
+  "geist": "^1.2.1",
   "lucide-react": "^0.537.0",
   "next": "^14.2.3",
   "next-themes": "^0.4.6",
